k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: syncsphere-ingress

spec:
  ingressClassName: nginx

  rules:
  
  -  http:

      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend-service

            port:
              number: 80

      - path: /api
        pathType: Prefix

        backend:
          service:
            name: backend-service

            port:
              number: 5000

      - path: /uploads
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
